--- a/content/rules.html
+++ b/content/rules.html
@@ -23,9 +23,16 @@
     of when enemy formations conducts an Engage action. The only restriction is that Engaging formations may only move past, but not between, units with 'Scout'.
 </p>
 
-<h6>Clipping engages and counter charge</h6>
+<h6>Contacting more than one enemy unit during an engage</h6>
 <p>
-    Setting up engages and positioning formations properly is a skill that wins and loses games in Epic Armageddon. Unfortunately, this also means that the set-ups for engages tends to take a lot of time and result in quite a lot of arguments both over the inital engage and the subsequent counter charge movement. This is particularly true for the 'clipping engage', where a sliver of the targeted formation is participating against the vast majority of the engaging formation, while the rest are unable to counter charge due to there being another enemy formation that is closer. Our suggested solution is that units in defending formations may elect to remain stationary to gain 20cm range on their Fire Fight, but may not counter charge at all if the closest enemy formation is a supporting formation. The exception would be if one or more units can get in contact with a supporting enemy formation straight away (for example if a unit from a supporting formation is less than 10cm from a unit in the defending formation that has 30cm or more in speed).
+    A gray zone in the rules is under what conditions a unit can contact more than one unit when it engages. While units must move towards enemy units once they enter their zone of control is clear, but less clear is how creative with angling your models in the phase you can be. Our suggestion is to be liberal in interpreting this, and that engaging or counter charging units can always contact up to two enemy units if they have enough speed to do so, and there is enough physical space to fit.
+</p>
+
+<h6>Clipping engages and counter charges</h6>
+<p>
+    Setting up engages and positioning formations properly is a skill that wins and loses games in Epic Armageddon. Unfortunately, this also means that the set-ups for engages tends to take a lot of time and result in quite a lot of arguments both over the inital engage and the subsequent counter charge movement. This is particularly true for the 'clipping engage', where a sliver of the targeted formation is participating against the vast majority of the engaging formation, while the rest are unable to counter charge due to there being another enemy formation that is closer.</p>
+<p>
+    Our suggested solution is that units in defending formations that remain stationary may choose to gain 20cm range on their Fire Fight, participating in the engage in all respects (i.e. can be hit by enemy units and support as if they were within 15cm). The trade-off is that units in defending formations may only counter charge if the closest enemy unit from an attacking formation, or if one or more units from a supporting formation can be contacted straight away (for example if a unit from a supporting formation is less than 10cm from a unit in the defending formation that has 30cm or more in speed).
 </p>
 
 <h6>Preserve allocation order between normal and macro hits</h6>
