--- a/content/rules.html
+++ b/content/rules.html
@@ -20,7 +20,7 @@
     An issue that is explicitly unresolved in the core rules is the issue of units with the 'Scout' special rule blocking formations from engaging in unfair ways.
     While 'just don't do it' resolves some situations, it does lead to a grey zone of play which is very problematic and leads to unnecessary arguments.
     To resolve this issue we suggest that units with 'Scout' only counts as having 5cm in 'Zone of Control' for entire duration
-    of when enemy formations conducts an Engage action. The only restriction is that Engaging formations may only move past, but not between, units with 'Scout'.
+    of when enemy formations conducts an Engage action. The following exceptions apply: Engaging formations may only move past, but not between, units with 'Scout'. Air Assaults may not land within 10cm of Scouts. Formations that move out of Portals must engage Scouts that are within 10cm.
 </p>
 
 <h6>Contacting more than one enemy unit during an engage</h6>
