--- a/content/rules.html
+++ b/content/rules.html
@@ -15,24 +15,55 @@
     intermingle, it won't be treated as such. - If you think it can't be done, advise your opponent when they 'say it'.
 </p>
 
-<h6>'Scouting from behind'</h6>
+<h6>Scouting from behind</h6>
 <p>
-    An issue that is explicitly unresolved in the core rules is the issue of units with the 'Scout' special rule blocking formations from engaging in unfair ways.
-    While 'just don't do it' resolves some situations, it does lead to a grey zone of play which is very problematic and leads to unnecessary arguments.
-    To resolve this issue we suggest that units with 'Scout' only counts as having 5cm in 'Zone of Control' for entire duration
-    of when enemy formations conducts an Engage action. The following exceptions apply: Engaging formations may only move past, but not between, units with 'Scout'. Air Assaults may not land within 10cm of Scouts. Formations that move out of Portals must engage Scouts that are within 10cm.
+    An issue that is explicitly unresolved in the core rules is the issue of units with the <i>Scout</i> special rule
+    blocking formations from engaging in unfair ways. While 'just don't do it' resolves some situations, it does lead to
+    a grey zone of play which is very problematic and leads to unnecessary arguments. To resolve this issue we suggest
+    that units with <i>Scout</i> counts as having 5cm <i>Zone of Control</i> during enemy engage actions. The following
+    exceptions apply:
 </p>
+<ul>
+    <li>
+        Engaging formations may not pass threw scout formations (between models) that are not the target of the
+        assault, even if the reduced scout ZoC would leave an opening to do so.
+    </li>
+    <li>
+        Engaging formations may not target formations that are behind a formation of scouts, even if the reduced scout
+        ZoC would allow engaging formations to get within 15 cm of the formation behind the scout screen.
+    </li>
+    <li>
+        The reduced scout ZoC does not apply during air assaults.
+    </li>
+    <li>
+        Formations that move out of Portals must engage Scouts that are within 10cm.
+    </li>
+</ul>
 
 <h6>Contacting more than one enemy unit during an engage</h6>
 <p>
-    A gray zone in the rules is under what conditions a unit can contact more than one unit when it engages. While units must move towards enemy units once they enter their zone of control is clear, but less clear is how creative with angling your models in the phase you can be. Our suggestion is to be liberal in interpreting this, and that engaging or counter charging units can always contact up to two enemy units if they have enough speed to do so, and there is enough physical space to fit.
+    A gray zone in the rules is under what conditions a unit can contact more than one unit when it engages. While units
+    must move towards enemy units once they enter their zone of control is clear, but less clear is how creative with
+    angling your models in the phase you can be. Our suggestion is to be liberal in interpreting this, and that engaging
+    or counter charging units can always contact up to two enemy units if they have enough speed to do so, and there is
+    enough physical space to fit.
 </p>
 
 <h6>Clipping engages and counter charges</h6>
 <p>
-    Setting up engages and positioning formations properly is a skill that wins and loses games in Epic Armageddon. Unfortunately, this also means that the set-ups for engages tends to take a lot of time and result in quite a lot of arguments both over the inital engage and the subsequent counter charge movement. This is particularly true for the 'clipping engage', where a sliver of the targeted formation is participating against the vast majority of the engaging formation, while the rest are unable to counter charge due to there being another enemy formation that is closer.</p>
+    Setting up engages and positioning formations properly is a skill that wins and loses games in Epic Armageddon.
+    Unfortunately, this also means that the set-ups for engages tends to take a lot of time and result in quite a lot of
+    arguments both over the inital engage and the subsequent counter charge movement. This is particularly true for the
+    'clipping engage', where a sliver of the targeted formation is participating against the vast majority of the
+    engaging formation, while the rest are unable to counter charge due to there being another enemy formation that is
+    closer.</p>
 <p>
-    Our suggested solution is that units in defending formations that remain stationary may choose to gain 20cm range on their Fire Fight, participating in the engage in all respects (i.e. can be hit by enemy units and support as if they were within 15cm). The trade-off is that units in defending formations may only counter charge if the closest enemy unit from an attacking formation, or if one or more units from a supporting formation can be contacted straight away (for example if a unit from a supporting formation is less than 10cm from a unit in the defending formation that has 30cm or more in speed).
+    Our suggested solution is that units in defending formations that remain stationary may choose to gain 20cm range on
+    their Fire Fight, participating in the engage in all respects (i.e. can be hit by enemy units and support as if they
+    were within 15cm). The trade-off is that units in defending formations may only counter charge if the closest enemy
+    unit from an attacking formation, or if one or more units from a supporting formation can be contacted straight away
+    (for example if a unit from a supporting formation is less than 10cm from a unit in the defending formation that has
+    30cm or more in speed).
 </p>
 
 <h6>Preserve allocation order between normal and macro hits</h6>
@@ -50,7 +81,8 @@
     As far as we understand there are no rules defining how things work when a formation fires both BP and standard
     weapons. We suggest the following house-rule: A formation can chose to fire it's BP weapons before or after any
     non-BP weapons has been fired. This includes Macro and Titan Killer BP weapons (an exception to the
-    macro-always-goes-last rule). Resolve the BP shooting as a separate phase i.e. allocate and resolve hits from the BP weapon
+    macro-always-goes-last rule). Resolve the BP shooting as a separate phase i.e. allocate and resolve hits from the BP
+    weapon
     before moving on to ordinary weapons. Hits from ordinary weapons should be allocated front-to-back, as usual. This
     means that units that were hit by the BP weapon and survived can be allocated a second hit from standard
     shooting.
@@ -114,7 +146,8 @@
 
 <h6>Always roll for critical hits</h6>
 <p>
-    Players must always roll for critical hits in any situation where the critical hit may affect units or formations around the war engine,
+    Players must always roll for critical hits in any situation where the critical hit may affect units or formations
+    around the war engine,
     even if the War Engine was reduced to 0 DC before crits have been rolled for.
 </p>
 
@@ -144,7 +177,8 @@
     Terrain and War Engines are "infinitely high" to ground units with regards to line of sight. No ground unit can see
     directly through a piece of terrain – unless they are in it. Popped up skimmers can see over terrain, but can only
     see units that are further away from the edge of the terrain piece than they are. Same rule as for popped up
-    skimmers also apply for units on hills. Aircrafts can always see over all terrain. In addition, see the 'Terrain' section on this website.
+    skimmers also apply for units on hills. Aircrafts can always see over all terrain. In addition, see the 'Terrain'
+    section on this website.
 </p>
 
 <h6>TODO: WE transport transporting units, separate formations, may intermingle?</h6>
