--- a/content/rules.html
+++ b/content/rules.html
@@ -25,12 +25,12 @@
 </p>
 <ul>
     <li>
-        Engaging formations may not pass threw scout formations (between models) that are not the target of the
+        Engaging formations may not pass through scout formations (between models) that are not the target of the
         assault, even if the reduced scout ZoC would leave an opening to do so.
     </li>
     <li>
         Engaging formations may not target formations that are behind a formation of scouts, even if the reduced scout
-        ZoC would allow engaging formations to get within 15 cm of the formation behind the scout screen.
+        ZoC would allow engaging formations to get within 15cm of the formation behind the scout screen.
     </li>
     <li>
         The reduced scout ZoC does not apply during air assaults.
