--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -11,8 +11,7 @@
 <p>This scenario requires 3 special objective tokens for each player, with a special marker or double sided marker (for
     example a coin) which can be flipped or exchanged as objectives switch control between players.</p>
 
-<p>These objectives are placed in the same manner as in the Epic Tournament Scenario with some additional restrictions.
-    In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
+<p>In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
     corner, and the remaining two objectives must be set up at least 15cm away from any board edge. Also, you may not
     place objective markers in terrain that is impassable for any unit type.</p>
 
