--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -8,8 +8,7 @@
 </p>
 
 <h4>Place Objective Markers</h4>
-<p>Same as the NetEA Epic Tournament Game Rules, but there are some additional restrictions on objective placement.
-    In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
+<p>In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
     corner, and the remaining two objectives must be set up at least 15cm away from any board edge. Also, you may not
     place objective markers in terrain that is impassable for any unit type.</p>
 
