Fixed double redirect

--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
             return options.fn(context, {data: data})
         });
 
-        console.info("Redirecting to site");
-        window.location.replace("site.html");
+        window.location.replace("site.html?content=armies");
     });
 </script>
 </body>
