More cleanup and fixed rules formatting

--- a/site.html
+++ b/site.html
@@ -14,7 +14,7 @@
     <script src="script/navigation.js?v=1"></script>
     <script src="script/templating.js?v=1"></script>
 
-    <title>EA-Ragnarök</title>
+    <title>EA:Ragnarök</title>
 </head>
 <body>
 
@@ -42,7 +42,6 @@
             <a class="nav-link" href="content/online.html">Online Gaming</a>
         </li>
     </ul>
-
 
     <div id="content"></div>
     <p>&nbsp;</p>
