--- a/index.html
+++ b/index.html
@@ -1,134 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="armylist.css">
-
-    <script src="script/units.js?v=1"></script>
-    <title>EA</title>
+    <title>EA:Ragnarök</title>
+    <meta http-equiv="refresh" content="0; url=site.html?content=armies"/>
 </head>
 <body>
-<div id="container" class="container">
-    <div id="errors"></div>
-    <div id="content"></div>
-    <div id="units"></div>
-</div>
-
-<script id="error-template" type="text/x-handlebars-template">
-    {{#if errors}}
-    <h1 class="text-danger">Data validation errors:</h1>
-    <ul>
-        {{#each errors}}
-        <li class="text-danger">{{this}}</li>
-        {{/each}}
-    </ul>
-    {{/if}}
-</script>
-
-<!-- Optional JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
-
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-
-<script>
-    $(document).ready(function () {
-        console.log("[document-ready] initializing...");
-
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-
-        var errorTemplate = Handlebars.compile($("#error-template").html());
-        var unitsTemplate;
-        var armyTemplate;
-        var listTemplate;
-
-        $.get("templates/army.html").done(function (template) {
-            armyTemplate = Handlebars.compile(template);
-        });
-
-        $.get("templates/units.html").done(function (template) {
-            unitsTemplate = Handlebars.compile(template);
-        });
-
-        $.get("templates/list.html").done(function (template) {
-            listTemplate = Handlebars.compile(template);
-        });
-
-        $.get("partials/special-rules.html").done(function (template) {
-            Handlebars.registerPartial('special-rules', template);
-        });
-
-        $.get("partials/card-with-margin.html").done(function (template) {
-            Handlebars.registerPartial('card-with-margin', template);
-        });
-
-        $.get("partials/weapons.html").done(function (template) {
-            Handlebars.registerPartial('weapons', template);
-        });
-
-        Handlebars.registerHelper('oddEven', function (index) {
-            return index % 2 == 0 ? 'even' : 'odd';
-        });
-
-        Handlebars.registerHelper('and', function (one, two) {
-            return true === one && true === two;
-        });
-
-        Handlebars.registerHelper('isArray', function (object) {
-            return $.isArray(object);
-        });
-
-        Handlebars.registerHelper('appendOnNumber', function (value, suffix) {
-            if (isNaN(value)) {
-                return value;
-            } else {
-                return value + suffix;
-            }
-        });
-
-        Handlebars.registerHelper('upgrade', function (context, options) {
-            if (options.data) {
-                var data = Handlebars.createFrame(options.data);
-                data.options = context.options !== undefined ? context.options.length : 0;
-            }
-
-            return options.fn(context, {data: data})
-        });
-
-        Handlebars.registerHelper('unit', function (context, options) {
-            if (options.data) {
-                var data = Handlebars.createFrame(options.data);
-
-                var count = 0;
-                for (weapon in context.weapons) {
-                    count += context.weapons[weapon].modes.length;
-                }
-
-                data.weaponLines = count;
-                data.hasNotes = context.notes || context.specialRules;
-                data.hasNoNotes = !data.hasNotes;
-                data.singleLine = count == 1 && data.hasNoNotes;
-            }
-
-            return options.fn(context, {data: data})
-        });
-
-        window.location.replace("site.html?content=armies");
-    });
-</script>
+<p><a href="site.html?content=armies">Redirect</a></p>
 </body>
 </html>
