--- a/content/intro.html
+++ b/content/intro.html
@@ -9,8 +9,8 @@
 
 <p>
     These list are still in development but we feel we have reached a point where they are ready for a public beta.
-    We invite you to comment/bring ideas to the table through our Discord channel (link on the 'Online Gaming' page) we
-    have set up. With epic being out of production for many years now, our gaming friends are far and wide for us. We
+    We invite you to comment/bring ideas to the table through our Discord channel (link on the 'Online Gaming' page).
+    With epic being out of production for many years now, our gaming friends are far and wide for us. We
     play a lot of games online and invite you to also join in online games through the discord channel. On the 'Online
     Gaming' page you will find tutorials and links to play games via Tabletop Simulator. This software is available on
     steam for a few dollars. Special thanks to 'Norto' for a ton of the initial work on this project.
