Skitarii Log file

--- a/lists/AM/amtl.log.html
+++ b/lists/AM/amtl.log.html
@@ -1,6 +1,6 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Collegia Titanica is quite different from the NetEA and Epic UK Titan lists, and while inspired by both of them, it is not really based on either. Titans, and particularly the larger ones, have always been very problematic in Epic Armageddon, leading them to being very expensive to balance their enormous staying power. It also borrows some Questoris Knights from the Questoris Mechanicus list. This list does not attempt to incorporate the newly "discovered" Adeptus Titanicus Titans, those might need a separate list eventually.
+    The EA:Ragnarök Collegia Titanica is quite different from the NetEA and Epic UK Titan lists, and while inspired by both of them, it is not really based on either. Titans, and particularly the larger ones, have always been very problematic in Epic Armageddon, leading them to being very expensive to balance their enormous staying power. It also borrows some Questoris Knights from the Questoris Mechanicus list. This list does not attempt to incorporate the newly "discovered" Adeptus Titanicus Titans, those are intended to be included in the 'Legiones Skitarii: Mars' list.
 </p>
 <p>
     Battle Titans: Warlords and Reavers are split into two classes each, with very different loadouts possible. This was done to make the Warlord and Reaver easier to balance, and for thematic reasons. The Emperor Class Titans have been toned down, making them fit better at 3000 points.
