--- a/lists/Chaos/blacklegion.log.html
+++ b/lists/Chaos/blacklegion.log.html
@@ -16,6 +16,7 @@
     <li>The Armoured Company has been moved to the Support Section.</li>
     <li>Chosen are now forced to take Rhinos, but can replace these with Chaos Dreadnoughts. </li>
     <li>The Harbringer has been removed from the list.</li>
+    <li>The Decimator has had its FF value reduced to 5+.</li>
     <li>The Doom Wheel is in most ways better than a Chaos Warhound, and is therefore 25 points more expensive.</li>
     <li>The Chaos Warhounds have been reduced to 25cm speed, in line with other Warhound type units in the game.</li>
     <li>The Chaos Reaver and Warlord replaces the Khorne-type Titans that Black Legion had, but have essentially the same weapons. They inherit the type of changes that has been made to titans elsewhere in the game.</li>
