--- a/lists/SM/ironhands.log.html
+++ b/lists/SM/ironhands.log.html
@@ -3,7 +3,7 @@
     The EA:Ragnarök Iron Hands list is built by the EA:Ragnarok team with inspiration from the developmental NetEA list.
     The list has a strong focus on mechanized infantry, armored vehicles and Dreadnoughts and has access to many
     unique Dreadnought and Land Raider configurations. The list is designed for a ground based play style but also has
-    some formations that works well when deployed from space. And the list has access to Thunderhawk Transporters as a
+    some formations that works well when deployed from space. The list also has access to Thunderhawk Transporters as a
     way to air transport the mechanized infantry or armoured formations.
 </p>
 <p>
