Intro for the Ork Warhord, talking about Normal, Big and 'Uge formations

--- a/lists/O/goffsclan.log.html
+++ b/lists/O/goffsclan.log.html
@@ -1,7 +1,7 @@
 <h4>Version 1.0.beta</h4>
 <p>
     The EA:Ragnarök Clan Goffs Warhorde is based on the NetEA & Epic UK Ork War Horde lists. Most of the changes to the
-    list are described as part of the general ork changes.
+    list are described as part of the general Ork changes.
 </p>
 <p>
     Apart from the general Ork changes, the Clan Goffs Warhorde has received one new formation: the Mekboy Dreadmob.
