--- a/lists/AM/questorismechanicus.log.html
+++ b/lists/AM/questorismechanicus.log.html
@@ -6,5 +6,5 @@
     One very important constraint when making a list with the new Knight models for Adeptus Titanicus is how large they are compared to older Epic models. For this reason most formations are no more than three Knights each, with several being only a single one. The army is intended to represent a mechanized force with some of the new Skitarii units as support.
 </p>
 <p>
-    Like with the Knight World list, all Knights in QM are H-AVs, and have the same Ion Shield rules. They are not as hard as the Knights in the Adeptus Titanicus list, but have (among other things) the Stubborn and Chivalry rules to set them apart from the Knight World list.
+    Like with the Knight World list, all Knights in QM are H-AVs, and have the same Ion Shield rules. They are not as hard as the Knights in the Adeptus Titanicus list, but have (among other things) the Stubborn and Chivalry rules to set them apart from the Knight World list. A key to making the list work on the battlefield is not to get too spread out, but take advantage of the very small footprint this army can have, and try to have them support each other.
 </p>
