--- a/lists/SQ/squats.log.html
+++ b/lists/SQ/squats.log.html
@@ -3,34 +3,37 @@
     The EA:Ragnarök Wodanaz Stronghold list is based on the E-UK Squats list. The lists are mostly the same, but with a few important changes to force strucure, stats and additional units.
 </p>
 <p>
-    Act of Faith: The Act of Faith rule has been revised succeed automatically, but only if the formation successfully carries out an Engage action. This makes this rule less abusable, in particular it prevents Fearless scouts from marching up and blocking off entire sections of the battlefield.
+    Squat Warriors: Mostly unchanged, but can ride in a Leviathan War Engine, which is the only way to take this War Engine in the list. This also makes the 33% section more interesting.
 </p>
 <p>
-    The Exorcists have been split into two versions (one direct fire (Prioris) and one equipped with a Whirlwind Missile Launcher (Sanctorum)). The Exorcist Prioris have longer range but worse AT. It also have a 5+ Armour, since it is based on the Rhino.
+    Squat Berserkers: This unit felt slightly too strong in FF when compared to the Warriors and have had their FF reduced to 6+. In exchange they have free Rhinos and can be transported in Termites.
 </p>
 <p>
-    Battle Sisters: This formation have had their Heavy Flamers replaced with Heavy Bolters, as we found them to be somewhat too strong with Heavy Flamers. Battle Sisters Mission is also the sole Core formation in the Army, but is more flexible with options to replace Battle Sisters with Exorcist Prioris or to ride in a Sororitas Stormlord.
+    Termites and Hellbores: Termites are no longer just markers, but a transport vehicle that pops up on the board, making them more attractive when compared to the Rhino. The Hellbore is now a separate formation, no longer forcing its cargo to stay put after disembarking. The Hellbore also have slightly different stats.
 </p>
 <p>
-    No mixed Sister formations: In order to reduce confusion for players (there are quite a few types of "Sisters" in the list), each type of Sister unit now has its own type of formation, with the Celestial Sisters merging with the Immolator formation to create a quite expensive but very nasty Immolation formation.
-</p>
-<p>
-    Machine Spirits: Certain units which are basically servitors and are regarded as cannon fodder have been given the Machine Spirit rule, and are also Fearless and Expendable. These units are now upgrades to the Redemptionist formation.
-</p>
-<p>
-    Imperial Navy: The Lightning Strike Fighters have been replaced with the Lightning Interceptor, and the ground attack role been taken over by the Marauder Destroyer, which also replaces the Marauder Squadron. Since the list now contains Exorcist Sanctorums these are less needed.
+    Ragnarok Battle Cannons: Given the Viking-theme of the 40k Squats, and that this is EA: Ragnarök, all Battle Cannons in the list have been replaced with Ragnarok Battle Cannons. This also gives a slight but needed nerf to the Overlord and the Gyrokopter units.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
-    <li>The Inquisitor formation can now contain a Supreme Commander.</li>
+    <li>Since Squat core formations are fairly cheap, the number of support formations for each core formation has been reduced to 2.</li>
 </ul>
 <ul>
-    <li>A formation of four Hellhounds have been added to the list.</li>
+    <li>Squat Thunderfires have slightly worse stats, and have been given 5cm speed to prevent the formation form garrisoning when paired with Rhinos. While transporting Squat Thunderfires, Rhinos only have 20cm speed. It is possible to take Squat Thunderfires on their own for a reduced cost.</li>
 </ul>
 <ul>
-    <li>Rhinos are no longer free, but must be bought as an upgrade. This makes it more attractive to take other kinds of transport.</li>
+    <li>Kastelans inherits the changes to Machine Spirit made in other lists, and are now their own formation, chaperoned by a Squat Tech Priest unit. The Tarantulas are also Machine Spirits, and have been combined with the Rapiers.</li>
 </ul>
 <ul>
-    <li>The Repentia Sisters formation is different, and now contains the new Mortifier type unit. </li>
+    <li>Thunderers have slightly different stats, and can ride in Land Raiders.</li>
+</ul>
+<ul>
+    <li>The Overlord, being a very nasty War Engine, has been moved from the support section to the 33% section, and have different stats; worse save, but slightly faster.</li>
+</ul>
+<ul>
+    <li>The Goliath Battery is quite resilient, and can feel extreme against certain types of lists, and had its point cost raised, but with better armour. </li>
+</ul>
+<ul>
+    <li>The Land Train has been given better speed to make it more relevant when compared to other War Engines in the 33% section. It also has different stats on the Cars.</li>
 </ul>
