House rule on jinking aircraft with RA

--- a/content/rules.html
+++ b/content/rules.html
@@ -143,7 +143,13 @@
     enemy units in order to allocate hits to chosen enemy characters or units. This feels a bit gamy, and we
     suggest the following house-rule: Aircrafts on a ground attack mission may not be placed within 5cm of an
     enemy unit in the formation it is targeting. The restriction is always 5cm even for units with the
-    <i>scout</i> special rule.
+    <i>Scout</i> special rule.
+</p>
+
+<h6>Jinking Aircraft with Reinforced Armor</h6>
+<p>
+    The rules for how "jinking" interacts with <i>Reinforced Armor</i> is again vague. We suggest the aircraft will get
+    a 4+ save, that can be re-rolled as specified by the <i>Reinforced Armor</i> special rule.
 </p>
 
 <h6>Always roll for critical hits</h6>
