Dark Angels log 2

--- a/lists/SM/darkangels.log.html
+++ b/lists/SM/darkangels.log.html
@@ -1,9 +1,13 @@
 <h4>Version 1.0.beta</h4>
 <p>
-    The EA:Ragnarök Codex Astartes list is based on the NetEA version. A great challenge with Codex Astartes is to keep
-    it relevant while adding new Space Marine chapters, where each new chapter will do a better job at a particular
-    playstyle. To make it unique, it was decided to keep the wide-open structure of the original list, while making
-    other Space Marine lists more rigid. It is also one of the few lists that has access to the very powerful Landing
-    Craft. A Space Marine fighter, the Storm Talon, has been introduced for all Space Marine lists, but as a unique
-    feature of the Codex Astartes the Imperial Aircrafts has been kept in the list.
+    The EA:Ragnarök Dark Angels list is based on list that was under development to NetEA, while taking some inspiration from the Epic UK version of the list. The Dark Angels is of course one of the most high-profile Space Marine chapters, and as such has a incredible variety of special fluff and units. This version of the list removes the Air Assault assets, and puts special emphasis on the combined arms aspect, where Deathwing Terminators and Ravenwing formations work together.
+</p>
+<p>
+    Compulsory Space Ship: In order to make it cheaper to deploy Terminators in a Space Ship (which is required to take full advantage of the Teleport Homer special rule), the Hunter Class Destroyer has been introduced. It can be upgraded to a normal Strike Cruiser.
+</p>
+<p>
+    Deathwing: Unlike E-UK, there is no Deathwing special rule. After all, all Terminators are supposed to be exceptionally brave. The Deathwing fluff is instead reflected in the inclusion of Cyclone Terminators, and the option of taking the inner circle Deathwing Knights.
+</p>
+<p>
+    Teleport Homer: All Ravenwing Land Speeders have the Teleport Homer special rule, which allows Terminators deployed in a space ship to arrive on the battlefield during the turn, as well as at the start of any turn. Dark Angels Captains are also equipped with Teleport Homers.
 </p>
