Orbital bombardment extra template

--- a/content/rules.html
+++ b/content/rules.html
@@ -152,6 +152,12 @@
     a 4+ save, that can be re-rolled as specified by the <i>Reinforced Armor</i> special rule.
 </p>
 
+<h6>Orbital Bombardment extra templates</h6>
+<p>
+    Since Space Ships in EA:Ragnarök are cheaper and can arrive earlier,
+    extra templates from Orbital Bombardment must touch the first, plotted template, just as for normal BP type weapons.
+</p>
+
 <h6>Always roll for critical hits</h6>
 <p>
     Players must always roll for critical hits in any situation where the critical hit may affect units or formations
